# Yapo-Autos-Usados-Detector-de-Oportunidades-en-el-Mercado-Chileno

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.save  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  run_pipeline.py
notebooks/: 00_exploracion_html.ipynb  01_EDA_listado.ipynb  02_EDA_raw.ipynb  03_EDA_clean.ipynb  04_Dag.ipynb  04b_NLP_Positivity_Check.ipynb  05_feature_engineering.ipynb  05_featuring_engineering.ipynb  05a_EDA_SII.ipynb  05b_Fix_aliases.ipynb  06_EDA_post_fusion.ipynb
tests/: test_data.py
yapo_autos_usados/: Load_sql.py  Load_sql_GCS.py  Refresh_.py  Scraping_detalle.py  Scraping_pasada1.py  __init__.py  cleaning.py  features.py  join_csv.py  plots.py
yapo_autos_usados/modeling/: predict.py  train.py
