[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "yapo_autos_usados"
version = "0.0.1"
description = "Analisis de venta de autos usados Chile"
authors = [
  { name = "Ivan Riquelme" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["yapo_autos_usados"]
include = ["pyproject.toml", "yapo_autos_usados/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["yapo_autos_usados"]
force-sort-within-sections = true

